--- a/SuperAlarmaWeb/src/app/alarm-buttons/alarm-buttons.component.html
+++ b/SuperAlarmaWeb/src/app/alarm-buttons/alarm-buttons.component.html
@@ -1,6 +1,6 @@
 <div class="alarm-buttons">
-  <button>Create Alarm</button>
-  <button routerLink="/personalizar">Personalize Alarm</button>
-  <button>Edit Alarm</button>
-  <button routerLink="/apagar">Stop Alarm</button>
+  <button routerLink="/crear">Crear Alarma</button>
+  <button routerLink="/personalizar">Personalizar Alarma</button>
+  <button>Editar Alarma</button>
+  <button routerLink="/apagar">Detener Alarma</button>
 </div>
