--- a/SuperAlarmaWeb/src/app/personalizar/personalizar.component.css
+++ b/SuperAlarmaWeb/src/app/personalizar/personalizar.component.css
@@ -1,10 +1,12 @@
+
 .app-container {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   position: relative;
   background: linear-gradient(180deg, rgba(251, 253, 255, 0) 78%, #0072DB 100%, rgba(188.53, 218.32, 245.92, 0.25) 100%);
 }
-
 app-top-menu {
   margin-left: auto;
   position: absolute;
@@ -12,29 +14,30 @@ app-top-menu {
   right: 0;
   width: 250px;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0);
+  background-color: white;
   z-index: 10;
 }
 
 .app-header {
-  width: 100%;
+  width: 98%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 16px 32px;
   border-bottom: 1px solid rgba(33, 33, 33, 0.08);
-  position: relative;}
+  position: relative;
+}
 
 .app-name {
-    font-family: Roboto;
-    font-size: 34px;
-    font-weight: 700;
-    line-height: 41px;
-    cursor: pointer;
-    flex-grow: 1;
-    text-align: center;
-    color: #427DD6;
-  }
+  font-family: Roboto;
+  font-size: 34px;
+  font-weight: 700;
+  line-height: 41px;
+  cursor: pointer;
+  flex-grow: 1;
+  text-align: start ;
+  color: #427DD6;
+}
 
 #titulo-seccion {
   padding: 20px;
